--- a/index.html
+++ b/index.html
@@ -1,23 +1,104 @@
-<!DOCTYPE html>
-<style>
-  /* netnet default bg */
-  body {
-    margin: 0;
-    background-image: linear-gradient(#515199a8 2px, transparent 1px),
-      linear-gradient(90deg, #515199a8 2px, transparent 1px);
-    background-size: 50px 50px;
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-  }
+<!-- Created by Xavier Petrie on 2025/12/01 -->
 
-  body::before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(0deg, #c76ebca8, #515199a8);
+<!DOCTYPE html>
+<html lang="en-CA">
+<head>
+<meta charset="UTF-8">
+<title>Xavier Petrie</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Kapakana:wght@300..400&display=swap" rel="stylesheet">
+
+<style>
+  ul {
+    margin: 0;
+    padding: 0;
+    text-align: right;
+    list-style: none;
+    }
+
+  li {
+    margin: 40px;
+    margin-left: 40px;
+    display: inline-block;
+    font-size: 32px;
+    font-family: "Instrument Sans", sans-serif;
+    } 
+
+  a {
+    color: white;
+    text-decoration: none; 
+    }
+
+  a:hover {
+    color: white;
+    text-decoration: underline;
+    }
+
+    body {
+      background-color: grey;
+      width: 1440px;
+      height: 4146px;
+    }
+
+    #heading {
+      background-color: black;
+      position: absolute;
+      top: 0;
+      left: 120px;
+      width: 1200px;
+      height: 120px;
+    }
+
+    .background {
+      width: 1200px;
+      height: 4050px;
+      background-color: white;
+      position: absolute;
+      top: 120px;
+      left: 120px
+    }
+
+    #black-background {
+      background-color: black;
+      position: absolute;
+      top: 2820px;
+      left: 120px;
+      width: 1200px;
+      padding-top: 50px;
+      padding-bottom: 50px;
+      height: auto;
   }
+  
+    .xlogo {
+      float: left;
+      margin: 20px;
+    }
+    h1 {
+      color: white;
+      font-size: 50px;
+      font-family: "Instrument Sans", sans-serif;
+      text-align: center;
+      font-weight: normal;
+      }
+    h2 {
+      color: black;
+      font-size: 50px;
+      font-family: "Instrument Sans", sans-serif;
+      text-align: left;
+      margin-top: 0;
+      font-weight: normal;
+      }
+
+    h3 {
+      color: black;
+      font-size: 24px;
+      font-family: "Instrument Sans", sans-serif;
+      font-weight: normal;
+      }
+   
 </style>
-    
+</head>
+  
+</html>
