--- a/index.html
+++ b/index.html
@@ -100,5 +100,26 @@
    
 </style>
 </head>
+<body>
+  <div id="heading">
+    <img src="X logo.png" alt="white cursive x" width="81px" height="81px" class="xlogo">
+ <nav>
+      <ul>
+        <li><a href="/">about</a></li>
+        <li><a href="/">resume</a></li>
+        <li><a href="/">xtier rugs</a></li>
+        <li><a href="/">contact</a></li>  
+        </ul>
+      </nav>
+    </div>
+<!-- BACKGROUND -->
+  <div class="background">
+ </div>
+<!-- BLACK BACKGROUND -->
+   <div id="black-background">
+ </div>
+
+
+</body>
   
 </html>
