--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     }
 
     body {
-      background-color: grey;
+      background-color: black;
       width: 1440px;
-      height: 4146px;
+      height: 1100px;
 
     }
 
@@ -54,7 +54,7 @@
 
     .background {
       width: 1200px;
-      height: 1263px;
+      height: 1100px;
       background-color: white;
       position: absolute;
       top: 120px;
@@ -113,6 +113,10 @@
       margin-bottom: 10px;
       }
   
+  .bold-text {
+    font-weight: bold;
+    }
+  
   p {
       margin-top: 100px;
       margin-bottom: 0;
@@ -128,7 +132,6 @@
   
   .list {
     list-style: disc; 
-    padding-left: 20px;
     text-align: left;
     margin-top: 100px;
 }
@@ -136,7 +139,7 @@
   .list li {
       display: list-item; 
       font-size: 24px;
-      margin: 10px 
+      margin: 50px;
   }
     
     h1 {
@@ -211,9 +214,9 @@
    <div class="update-text">
 
       <ul class="list">
-          <li>Holiday Markets - Designing and selling unique products at holiday booths with my business, X‑Tier Rug.</li>
-          <li>Classes - Attending class involving Digital Culture and skills in AI Integrated Design.</li>
-          <li>Brand Expansion - Expanding the X-Tier brand through advertising campaigns, vendor booths, and community outreach.</li>
+          <li><span class="bold-text">Holiday Markets</span> - Designing and selling unique products<br> at holiday booths with my business, X‑Tier Rug.</li>
+          <li><span class="bold-text">Classes</span> - Attending class involving Digital Culture and<br> skills in AI Integrated Design.</li>
+          <li><span class="bold-text">Brand Expansion</span> - Expanding the X-Tier brand through<br> advertising campaigns, vendor booths, and community outreach.</li>
         </ul>
       </div>
 
