--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       
         <li><a href="https://xpetrie.github.io/Xavier-Petrie_228-A3_Page-4/">xtier rugs</a></li>
         
-        <li><a href="/">contact</a></li>  
+        <li><a>contact</a></li>    
         </ul>
       </nav>
     </div>
